--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Nick Carducci nmcarducci@gmail.com",
   "license": "",
   "dependencies": {
+    "babel-node": "^0.0.1-security",
     "express": "^4.18.1",
     "mastercard-locations": "^1.0.3",
     "pm2": "^5.2.0"
