--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "mastercard-backbank-digital-ocean",
   "version": "1.0.0",
   "description": "debit for vau.money",
-  "main": "ecosystem.config.cjs",
+  "main": "src/index.js",
   "scripts": {
     "start": ""
   },
@@ -18,6 +18,7 @@
     "pm2": "^5.2.0"
   },
   "false": {
+    "@babel/node": "7.19.1",
     "dev": "node_modules/.bin/babel-node src/index.mjs",
     "start": "babel-node src/index.mjs",
     "@rollup/plugin-commonjs": "^17.0.0",
