--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "debit for vau.money",
   "main": "src/index.js",
   "scripts": {
-    "start": ""
+    "start": "node src/index.js"
   },
   "author": "Nick Carducci nmcarducci@gmail.com",
   "license": "",
