--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.3",
     "babel-register": "^6.26.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mastercard-oauth1-signer": "^1.1.6",
     "node-fetch": "^2.6.7",
